# localUNO

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.githooks/: pre-push
.github/workflows/: ci.yml
deploy/: README.md  luno.service  nginx-luno.conf
docs/: branch-protection.md  design.md  house-rules.md  rule-authoring.md  spec.md
src/lUNO/: __init__.py  cli.py
src/lUNO/cards_render/: __init__.py  generator.py
src/lUNO/cards_render/assets/: .gitkeep  FONT_LICENSE.md
src/lUNO/engine/: __init__.py  actions.py  cards.py  engine.py  hooks.py  state.py
src/lUNO/rules/: __init__.py  draw2_stack.py  draw_after_play.py  jump_in.py  multi_play.py  reverse_off.py  stalemate.py  standard.py  uno_call.py  win_unrestricted.py
src/lUNO/server/: __init__.py  app.py  session.py
src/lUNO/web/: .gitkeep  app.js  index.html  style.css
tests/: test_actions.py  test_app.py  test_cards.py  test_cli.py  test_draw2_stack.py  test_draw_after_play.py  test_e2e.py  test_engine.py  test_events.py  test_generator.py  test_githooks.py  test_hooks.py  test_jump_in.py  test_multi_play.py  test_reverse_off.py  test_rules_catalog.py  test_session.py  test_smoke.py  test_stalemate.py  test_standard.py  test_state.py  test_uno_call.py  test_verification.py  test_web.py  test_web_fever.py  test_web_play_fx.py  test_win_unrestricted.py
